--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "outDir": "dist",
 
     "noUncheckedIndexedAccess": true,
     "jsx": "react-jsx",
